# PetroGM-test-task

./: CMakeLists.txt  README.md  TEST.sh
include/: attack-relation-view.hpp  attack-relation.hpp  board-view.hpp  chess-board.hpp  piece-factory.cpp  piece-factory.hpp  piece-parser.hpp  piece-registrar.cpp  piece-registrar.hpp  piece.hpp  position.hpp
include/attack-direction/: abstract-attack-direction.hpp  attack-direction.hpp  jump-direction.hpp  linear-direction.hpp
include/creating/: piece-factory.hpp  piece-parser.hpp  piece-registrar.hpp
include/pieces/: abstract-piece.hpp  bishop.hpp  king.hpp  knight.hpp  piece.hpp  queen.hpp  rook.hpp  shadow-trace.hpp  shadow.hpp
inputs/: pieces.txt  test-input.txt
src/: attack-relation-view.cpp  attack-relation.cpp  board-view.cpp  chess-board.cpp  main.cpp  piece-factory.cpp  piece-parser.cpp  piece-registrar.cpp  piece.cpp  position.cpp
src/attack-direction/: abstract-attack-direction.cpp  attack-direction.cpp  jump-direction.cpp  linear-direction.cpp
src/creating/: piece-factory.cpp  piece-parser.cpp  piece-registrar.cpp
src/pieces/: abstract-piece.cpp  bishop.cpp  king.cpp  knight.cpp  piece.cpp  queen.cpp  rook.cpp  shadow-trace.cpp  shadow.cpp
